[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moana"
version = "0.2.0"
license = "MIT"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "pandas",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/clementranc/moana"
