[project]
name = "moana-pypi"
dynamic = ["version"]
description = "MOAna: Microlensing Observations ANAlysis tools"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Clément Ranc" },
    { email = "ranc@iap.fr"},
    { name = "Stela IS" },
    { name = "Stela IS" },
    { name = "MOAna authors" },
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "pandas",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/clementranc/moana"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/moana/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/moana"]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"